# correction/api/app/db/seeder/01_products.js
@@ -1,35 +1,90 @@
 export default [
 
     {
-        name: 'Croissant',
-        price: 1.50,
+        name: "Croissants de Mamie Nova",
+        type: "croissant",
+        price: 2,
         quantity: 30, 
-        description: 'Un croissant savoureux, fait avec amour',
-        url: 'https://cdn.pixabay.com/photo/2022/11/08/05/06/bread-7577706_1280.jpg'
+        description: "Un croissant savoureux, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2022/11/08/05/06/bread-7577706_1280.jpg"
     },
     {
-        name: 'Pain au chocolat',
-        price: 2.00,
+        name: "Croissants de Pierre",
+        type: "croissant",
+        price: 2,
         quantity: 30, 
-        description: 'Pain au chocolat du nid d\'abeilles',
-        url: 'https://cdn.pixabay.com/photo/2020/04/24/15/00/chocolate-bread-5087206_1280.jpg'
+        description: "Un croissant savoureux, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2022/11/08/05/06/bread-7577706_1280.jpg"
     },
     {
-        name: 'Macaron',
-        price: 2.00,
+        name: "Croissants de Jean",
+        type: "croissant",
+        price: 2,
+        quantity: 30, 
+        description: "Un croissant savoureux, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2022/11/08/05/06/bread-7577706_1280.jpg"
+    },
+    {
+        name: "Croissants de Lucas",
+        type: "croissant",
+        price: 2,
+        quantity: 30, 
+        description: "Un croissant savoureux, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2022/11/08/05/06/bread-7577706_1280.jpg"
+    },
+    {
+        name: "Pain au chocolat de Bernadette",
+        type: "pain au chocolat",
+        price: 2,
+        quantity: 30, 
+        description: "Pain au chocolat du nid d'abeilles",
+        url: "https://cdn.pixabay.com/photo/2020/04/24/15/00/chocolate-bread-5087206_1280.jpg"
+    },
+    {
+        name: "Macaron de Michel",
+        type: "macaron",
+        price: 2,
         quantity: 20,
-        description: 'Macaron agréable au goût, fait avec amour',
-        url: 'https://cdn.pixabay.com/photo/2017/07/28/14/28/macarons-2548818_1280.jpg'
+        description: "Macaron agréable au goût, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2017/07/28/14/28/macarons-2548818_1280.jpg"
     },
     {
-        name: 'Cookie',
-        price: 3.00,
+        name: "Macaron de Thomas",
+        type: "macaron",
+        price: 2,
+        quantity: 20,
+        description: "Macaron agréable au goût, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2017/07/28/14/28/macarons-2548818_1280.jpg"
+    },
+    {
+        name: "Macaron de Mathilde",
+        type: "macaron",
+        price: 2,
+        quantity: 20,
+        description: "Macaron agréable au goût, fait avec amour",
+        url: "https://cdn.pixabay.com/photo/2017/07/28/14/28/macarons-2548818_1280.jpg"
+    },
+   
+    {
+
+        name: "Cookie de Fabrice",
+        type: "cookie",
+        price: 3,
         quantity: 30, 
-        description: 'Cookie délicieux de Mémé Janine',
-        url: 'https://cdn.pixabay.com/photo/2016/05/12/13/35/cookies-1387826_1280.jpg'
+        description: "Cookie délicieux de Mémé Janine",
+        url: "https://cdn.pixabay.com/photo/2016/05/12/13/35/cookies-1387826_1280.jpg"
+    },
+    {
+
+        name: "Cookie de Françoise",
+        type: "cookie",
+        price: 3,
+        quantity: 30, 
+        description: "Cookie délicieux de Mémé Janine",
+        url: "https://cdn.pixabay.com/photo/2016/05/12/13/35/cookies-1387826_1280.jpg"
     }
 
 
 
 
-]
+];
